--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ h3.white {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
@@ -172,6 +173,38 @@ h3.white {
     width: 50%;
     border-bottom: 2px solid #adff2f; 
 } 
+
+section {
+    width: 95%;
+    margin: 20px auto;
+    line-height: 1.5;
+}
+
+.row {
+    margin: 20px 0;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.col {
+    width: calc((100% / 6) - 20px);
+    text-align: center;
+}
+
+.subtitle {
+    color: #a3a3a3;
+    font-size: 12px;
+}
+
+.circle img {
+    width: 100%;
+    border-radius: 50%;
+}
+
+
 
 /* REGOLE PLAY-BAR */
 
