--- a/css/style.css
+++ b/css/style.css
@@ -180,8 +180,11 @@ section {
     line-height: 1.5;
 }
 
-.row {
+#wrapper .row {
     margin: 20px 0;
+}
+
+.row {
     width: 100%;
     display: flex;
     justify-content: flex-start;
@@ -189,7 +192,7 @@ section {
     flex-wrap: wrap;
 }
 
-.col {
+.library .col {
     width: calc((100% / 6) - 20px);
     text-align: center;
 }
@@ -216,4 +219,95 @@ section {
     bottom: 0;
     left: 0;
     z-index: 1000;
+}
+
+#play-bar .row {
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+#play-bar .col {
+    width: calc(25% - 10px);
+    padding: 10px;
+}
+
+#play-bar .col.left {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#play-bar .col.big {
+    width: calc(50% - 10px);
+    text-align: center;
+}
+
+
+#play-bar .cover {
+    width: 50px;
+}
+
+.icons {
+    font-size: 25px;
+}
+
+.icons.side {
+    color: #a3a3a3;
+    margin-left: 40px;
+}
+
+.icons.side i {
+    margin-left: 20px;
+}
+
+.up-tools .icons {
+    padding: 15px;
+    color: #ffffff;
+}
+
+#play {
+    font-size: 35px;
+}
+
+.down-tools {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    gap: 20px;
+    font-size: smaller;
+    font-weight: bold;
+
+}
+
+.grey-bar {
+    display: inline-block;
+    width: 100%;
+    height: 5px;
+    background-color: #525252;
+    border-radius: 20px;
+    position: relative;
+}
+
+.grey-bar::before {
+    content: "";
+    display: inline-block;
+    width: 20%;
+    height: 5px;
+    background-color: #c1c1c1;
+    border-radius: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
+
+.grey-bar.small {
+    width: 50%;
+}
+
+.down-tools.small {
+    justify-content: flex-end;
 }
