--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 
 
 img {
-    max-width: 100%;
+    width: 100%;
 }
 
 ul {
@@ -52,6 +52,10 @@ a {
 .logo {
     width: 60%;
     margin: 15px;
+}
+
+#logo-small {
+    display: none;
 }
 
 .menu {
