--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ a {
     border-radius: 20px;
     position: absolute;
     top: 20px;
-    right: 10px;
+    right: 20px;
 }
 
 .library nav {
@@ -320,7 +320,7 @@ section {
     height: 100%;
     width: 100%;
     opacity: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .circle .overlay {
@@ -332,9 +332,13 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 80px;
+    font-size: 50px;
 }
 
 .overlay:hover {
     opacity: 1;
+}
+
+.button:hover, #play-bar .fa-circle-play:hover {
+    transform: scale(1.2);
 }
